--- a/land.css
+++ b/land.css
@@ -8,6 +8,7 @@ body {
 header {
   padding: 15px;
   margin-top: 3px;
+  border: 3px solid rgb(0, 0, 0);
   background-color: rgb(255, 252, 252);
   text-align: center ;
   font-size: large;
@@ -24,8 +25,8 @@ section {
 section img {
   padding: 1%;
   margin: 3%;
-  height: 15%;
-  width: 20%;
+  height: 20%;
+  width: 25%;
   background-color: rgb(146, 200, 184);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
