--- a/land.css
+++ b/land.css
@@ -1,19 +1,20 @@
-
 body {
   font-family: 'Helvetica Neue', sans-serif;
   color: #000000;
   background-color: #fafafa;
-
 }
+
 header {
   padding: 15px;
   margin-top: 3px;
   border: 3px solid rgb(0, 0, 0);
   background-color: rgb(255, 252, 252);
-  text-align: center ;
+  text-align: center;
   font-size: large;
+  letter-spacing: 5px;
   text-shadow: 15.3px 15.3px 15.3px rgb(0, 0, 0);
 }
+
 section {
   padding: 5%;
   margin: 3%;
@@ -22,17 +23,25 @@ section {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
 }
+
+
 section img {
   padding: 1%;
-  margin: 3%;
-  height: 20%;
-  width: 25%;
+  margin: 0 auto 3% auto;
+  height: auto;
+  width: 100%;
+  max-width: 300px;
+  position: relative;
   background-color: rgb(146, 200, 184);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  
-}
-section img:hover{
-  transform: scale(1.35);
+  display: block;
   transition: transform 0.3s ease;
 }
+
+section img:hover {
+  transform: scale(1.1);
+}
+
+
+
