--- a/net.css
+++ b/net.css
@@ -9,15 +9,24 @@ body {
     background: linear-gradient(120deg, #f0f8ff, #e0f7fa);
     color: #333;
     line-height: 1.6;
+    margin: 10%;
+    padding: 5%;
 }
 
 .container {
     max-width: 900px;
-    margin: 40px auto;
+    margin: 50px;
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     border-radius: 50px;
+    display:flexbox;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 
 header {
@@ -44,12 +53,13 @@ header h1 {
 }
 
 #skills ul {
-    list-style: none;
+     list-style: none;
     text-align: center;
 }
 
 #skills ul li {
     margin: 10px 0;
+    list-style: none;
 }
 
 #skills a {
@@ -58,5 +68,7 @@ header h1 {
     background-color: #0077b6;
     padding: 10px 20px;
     border-radius: 8px;
-    
+    list-style: none;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
 }
