--- a/htmlsec.css
+++ b/htmlsec.css
@@ -7,72 +7,65 @@ body {
 
 h2 {
   text-align: center;
+  color: #2c3e50;
 }
 
 p {
   text-align: center;
 }
 
-#collage {
-  background-color: rgb(119, 152, 181);
-  padding: 8%;
-  margin: 3%;
-  box-shadow: 0 0 15px rgba(0, 0, 0,0.1);
-  border-radius: 50px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1000px;
 }
 
-#collage a {
-  display: block;
-  text-align: center;
-  margin: 10px auto;
-}
-
-#land {
-  padding: 8%;
-  margin: 3%;
-  background-color: rgb(119, 152, 181);
-    box-shadow: 0 0 15px rgba(0, 0, 0,0.1);
-  border-radius: 50px;
-}
-
-#land h1 {
-  color: #333;
-  text-align: center;
-}
-
-#land h2, #land h3 {
-  color: #555;
-  text-align: center;
-}
-
-#land ul {
-  margin-left: 20px;
-}
-
-#land a {
-  display: block;
-  text-align: center;
-  margin: 10px auto;
-}
 nav ul {
   display: flex;
   justify-content: center;
-
-  padding: 10px;
   list-style: none;
-  border-radius: 12px;
+  padding: 10px;
+  font-size: large;
 }
+
 nav ul li {
   margin: 0 20px;
 }
+
 nav ul li a {
   text-decoration: none;
   font-weight: bold;
-
+  color: #000;
 }
+
 nav ul li a:hover {
   color: #0077b6;
-
 }
 
+section {
+  background-color: rgb(119, 152, 181);
+  padding: 8%;
+  margin: 3%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  border-radius: 50px;
+  width: 100%;
+}
 
+section ul {
+  margin-left: 20px;
+}
+
+a {
+  display: block;
+  text-align: center;
+  margin: 10px auto;
+  font-size: large;
+  color: #0077b6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
