--- a/net.css
+++ b/net.css
@@ -1,32 +1,21 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(120deg, #f0f8ff, #e0f7fa);
     color: #333;
-    line-height: 1.6;
-    margin: 10%;
-    padding: 5%;
+    line-height: 2.6;
+
 }
 
 .container {
-    max-width: 900px;
-    margin: 50px;
-    padding: 20px;
+    margin: 2%;    
+    padding: 4%;
     background-color: #ffffff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    border-radius: 50px;
     display:flexbox;
     flex-wrap: wrap;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 32px;
-    margin-bottom: 32px;
 }
 
 header {
@@ -45,30 +34,37 @@ header h1 {
     margin-top: 10px;
 
 }
-
-#skills h2 {
+section{
+    padding: 10%;
+    margin: 5%;
+    background-color: antiquewhite;
+}
+ h2 {
     text-align: center;
     color: #023e8a;
     margin-bottom: 15px;
 }
 
-#skills ul {
-     list-style: none;
-    text-align: center;
+ ul {
+    list-style: none;
 }
-
-#skills ul li {
+ul li {
     margin: 10px 0;
     list-style: none;
 }
 
-#skills a {
- 
+nav a {
+    
+    flex-wrap: wrap;
     color: #ffffff;
     background-color: #0077b6;
-    padding: 10px 20px;
+    padding: 10px 8px;
+    display: flexbox;
+    justify-items: center;
+    gap: 20px;
+    align-items: center;
     border-radius: 8px;
     list-style: none;
     text-decoration: none;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.8s ease;
 }
