--- a/net.css
+++ b/net.css
@@ -49,29 +49,32 @@ section{
     list-style: none;
 }
 ul li {
-    margin: 10px 0;
+    margin: 40px 0;
     list-style: none;
 }
 
 nav a {
     
     text-decoration: none;
-    
-    color: #ffffff;
-    background-color: #0077b6;
-    padding: 10px 8px;
-    display:grid;
-    justify-content: center;
-    gap: 20px;
+    font-size: 1.2rem;
+    color: #539cd1;
+    padding: 8px 2px;
+    margin: 1px;
+    display:flexbox;
+    justify-items: center;
+    gap: 1px;
     align-items: center;
     border-radius: 8px;
     list-style: none;
+    font-size: large;
     text-decoration: none;
-    transition: background-color 0.8s ease;
 }
 nav a:hover {
+    
     transform: scale(1.1);
-    background-color: #515151;
+    background-color: #d0e7f9;
+    color: #023e8a;
+
 }
 footer {
   text-align: center;
